--- a/Style.css/Manu.css
+++ b/Style.css/Manu.css
@@ -6,6 +6,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 200px;
 }
 .titke{
     font-size: 45px;
@@ -41,4 +42,17 @@ nav li {
     border: 0;
     padding: 15px 35px;
 
+}
+/* header style */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
+    height: 600px;
 }
